# 3FS

./: CMakeLists.txt  README_zh.md  cmake.md
.cursor/rules/: 3fs-sourcecode-guide.mdc
cmake/: Target.cmake
deploy/data_placement/: data_placement.md
deploy/data_placement/src/model/: data_placement.py
src/client/mgmtd/: MgmtdClient.cc
src/client/storage/: StorageClient.cc  StorageClientImpl.cc
src/common/app/: Application.md  ApplicationBase.cc  ApplicationBase.h  OnePhaseApplication.h  TwoPhaseApplication.h  Utils.cc
src/common/monitor/: Monitor.cc  Monitor.h
src/common/net/: Client.h  EventLoop.cc  EventLoop.h  IOWorker.cc  IOWorker.h  IOWorker原理.md  IfAddrs.h  Listener.cc  Listener原理.md  Processor.h  RDMAControl.h  Transport.cc  WriteItem.h  网络通信模块实现.md
src/common/net/ib/: IBConnect.cc  IBConnect.md  IBDevice.cc  IBDevice.h  IBDevice.md  IBSocket.cc  IBSocket.h  IBSocket.md  RDMABuf.h  RDMABuf.md
src/common/serde/: CallContext.h  ClientContext.h  Echo.h  Service.h  Services.h
src/common/utils/: CPUExecutorGroup.cc  DynamicCoroutinesPool.cc  IdAllocator.h  TypeTraits.h
src/core/app/: MgmtdClientFetcher.h  ServerLauncher.h
src/fbs/meta/: Common.h
src/fbs/storage/: Service.h
src/fuse/: FuseApplication.cc  FuseClients.cc  FuseClients.h  FuseConfigFetcher.cc  FuseMainLoop.cc  FuseOps.cc  IoRing.cc  IoRing.h  IovTable.cc  IovTable.h  PioV.cc  hf3fs_fuse.cpp
src/lib/api/: UsrbIo.cc  hf3fs_usrbio.h
src/meta/: meta.cpp  meta.md
src/meta/components/: InodeIdAllocator.cc
src/meta/service/: MetaOperator.cc  MetaOperator.h
src/meta/store/: Inode.cc  Operation.h
src/meta/store/ops/: BatchOperation.cc
src/monitor_collector/: monitor.md  monitor_collector.cpp
src/storage/: storage.md
src/storage/aio/: AioReadWorker.cc
src/storage/service/: BufferPool.cc  BufferPool.h  ReliableForwarding.cc  StorageOperator.cc  StorageServer.cc
src/storage/store/: ChunkEngine.cc  StorageTarget.cc  StorageTargets.cc
src/stubs/common/: StubFactory.h
